# irssi

./: .clang-format  .cvsignore  .gitattributes  .gitignore  .muon_fmt.ini  .travis.yml  AUTHORS  COMMANDS  COPYING  GEMINI.md  INSTALL  MANIFEST.in  Makefile.am  NEWS  README  README-HEBREW  README-NIX.md  README.cygwin  README.md  README.otr  TODO  acconfig.h  autogen.sh  colorless.theme  config  config_dev  configure.ac  configure.in  configure.sh  curses.m4  default.theme  file2header.sh  findsyntax.pl  flake.nix  glib-2.0.m4_  irssi-1.pc.in  irssi-config.in  irssi-version.h  irssi-version.h.in  irssi-version.sh  (+17 more)
docs/: .cvsignore  COMMANDS  FAQ  FORMATS  Makefile.am  New-users.html  New-users.txt  PERL  SIGNALS  SPECIAL_VARS  botnet.txt  capsicum.txt  commands.txt  crash.txt  design.html  design.txt  example-cross-android-aarch64.txt  faq.html  faq.txt  formats.txt  irssi.1  manual.txt  meson-macos-ar.txt  meson.build  perl.txt  proxy.txt  qna.html  qna.txt  signals.txt  special_vars.txt  startup-HOWTO-rus.html  startup-HOWTO.html  startup-HOWTO.txt
docs/help/: Makefile.am  Makefile.am.gen  help  meson.build
docs/help/in/: Makefile.am.gen  accept.in  action.in  admin.in  alias.in  away.in  ban.in  bantype.in  beep.in  bind.in  cat.in  cd.in  channel.in  clear.in  completion.in  connect.in  ctcp.in  cycle.in  date.in  dcc.in  dehilight.in  deop.in  devoice.in  die.in  disconnect.in  echo.in  eval.in  exec.in  flushbuffer.in  flushbuffers.in  format.in  hash.in  help.in  hilight.in  ignore.in  info.in  invite.in  invitelist.in  ircnet.in  irssiproxy.in  (+94 more)
docs/historical/: README.md  Tao-of-IRC.940110  bigmatix  operguide.txt  opermyth.txt
src/: Makefile.am  common-setup.h  common.h  irssi-plugin-gui.h  irssi-plugin.h  meson.build  nls.h  signal.doc
src/core/: Makefile.am  args.c  args.h  capsicum.c  capsicum.h  channel-rec.h  channel-setup-rec.h  channels-setup.c  channels-setup.h  channels.c  channels.h  chat-commands.c  chat-protocols.c  chat-protocols.h  chatnet-rec.h  chatnets.c  chatnets.h  commands.c  commands.h  core.c  core.h  expandos.c  expandos.h  ignore.c  ignore.h  iregex-gregex.c  iregex-regexh.c  iregex.h  levels.c  levels.h  line-split.c  line-split.h  log-away.c  log.c  log.h  masks.c  masks.h  memdebug.c  memdebug.h  meson.build  (+83 more)
src/fe-common/: Makefile.am  meson.build
src/fe-common/core/: Makefile.am  autorun.c  autorun.h  chat-completion.c  chat-completion.h  command-history.c  command-history.h  completion.c  completion.h  fe-capsicum.c  fe-capsicum.h  fe-channels.c  fe-channels.h  fe-common-core.c  fe-common-core.h  fe-core-commands.c  fe-core-commands.h  fe-exec.c  fe-exec.h  fe-expandos.c  fe-help.c  fe-ignore-messages.c  fe-ignore.c  fe-log.c  fe-messages.c  fe-messages.h  fe-modules.c  fe-proxy.c  fe-queries.c  fe-queries.h  fe-recode.c  fe-recode.h  fe-server.c  fe-settings.c  fe-settings.h  fe-tls.c  fe-tls.h  fe-windows.c  fe-windows.h  formats.c  (+31 more)
src/fe-common/irc/: .cvsignore  Makefile.am  completion.c  completion.h  fe-cap.c  fe-channels.c  fe-common-irc.c  fe-common-irc.h  fe-ctcp.c  fe-events-numeric.c  fe-events.c  fe-ignore.c  fe-irc-channels.c  fe-irc-channels.h  fe-irc-commands.c  fe-irc-layout.c  fe-irc-messages.c  fe-irc-queries.c  fe-irc-server.c  fe-irc-server.h  fe-ircnet.c  fe-modes.c  fe-netjoin.c  fe-netjoin.h  fe-netsplit.c  fe-queries.c  fe-queries.h  fe-query.c  fe-query.h  fe-sasl.c  fe-whois.c  irc-completion.c  irc-hilight-text.c  irc-hilight-text.h  irc-modules.c  irc-nick-hilight.c  irc-window-activity.c  meson.build  module-formats.c  module-formats.h  (+1 more)
src/fe-fuzz/: Makefile.am  dcc-tokens.txt  dcc.c  irssi.c  meson.build  module-formats.h  null-logger.c  null-logger.h  server.c  tokens.txt
src/fe-fuzz/fe-common/: Makefile.am
src/fe-fuzz/irc/: meson.build
src/fe-none/: .cvsignore  Makefile.am  irssi.c  meson.build  module.h
src/fe-text/: .cvsignore  Makefile.am  cuix-api.c  cuix-api.h  cuix-lib.c  cuix-lib.h  cuix.c  cuix.h  gui-entry.c  gui-entry.h  gui-expandos.c  gui-mainwindows.c  gui-mainwindows.h  gui-printtext.c  gui-printtext.h  gui-readline.c  gui-readline.h  gui-special-vars.c  gui-special-vars.h  gui-statusbar-items.c  gui-statusbar-items.h  gui-statusbar.c  gui-statusbar.h  gui-textwidget.c  gui-textwidget.h  gui-windows.c  gui-windows.h  irssi-dummy.c  irssi.c  lastlog.c  mainwindow-activity.c  mainwindows-layout.c  mainwindows-save.c  mainwindows.c  mainwindows.h  meson.build  module-formats.c  module-formats.h  module.h  screen.c  (+30 more)
src/irc/: .cvsignore  Makefile.am  irc.c  meson.build
src/irc/bot/: Makefile.am  bot-commands.c  bot-commands.h  bot-events.c  bot-irc-commands.c  bot-users.c  bot-users.h  bot.c  bot.h  botnet-connection.c  botnet-users.c  botnet-users.h  botnet.c  botnet.h  botnets.sample  module.h  users.sample
src/irc/core/: Makefile.am  bans.c  bans.h  channel-events.c  channel-events.h  channel-rejoin.c  channel-rejoin.h  channels-query.c  channels-query.h  channels-setup.c  channels-setup.h  channels.c  channels.h  ctcp.c  ctcp.h  ignore.c  ignore.h  irc-cap.c  irc-cap.h  irc-channels-setup.c  irc-channels.c  irc-channels.h  irc-chatnets.c  irc-chatnets.h  irc-commands.c  irc-commands.h  irc-core.c  (+57 more)
src/lib-config/: Makefile.am  get.c  iconfig.h  irssi-config.c  irssi-config.h  meson.build  module.h  parse.c  set.c  write.c
src/lib-popt/: .cvsignore  Makefile.am  findme.c  popt.c  popt.h  poptconfig.c  popthelp.c  poptint.h  poptparse.c
src/otr/: Makefile.am  irssi-otr.h  key.c  key.h  meson.build  module.c  module.h  otr-fe.c  otr-fe.h  otr-formats.c  otr-formats.h  otr-module.c  otr-ops.c  otr.c  otr.h
src/perl/: .cvsignore  Makefile.am  Makefile_silent.pm  get-signals.pl  irssi-core.pl  irssi-perl.c  irssi-perl.h  libperl_dynaloader.la  libperl_orig.la  meson.build  module-fe.h  module-formats.c  module-formats.h  module.h  perl-common.c  perl-common.h  perl-core.c  perl-core.h  perl-fe.c  perl-signals.c  perl-signals.h  perl-sources.c  perl-sources.h  perl.c  xsinit.c
tests/fe-text/: Makefile.am  meson.build  mock-irssi.c  test-paste-join-multiline.c
(+330 files in other folders)
